styles.css
.mobile-navbar ul{
  display: flex;
  justify-content: center;
  align-items: center;

}


  * {
    margin: 0;
    padding: 0;
    font-family: 'Inter', sans-serif;
    list-style: none;
    text-decoration: none;
  }
  
  body {
    display: flex;
    flex-direction: column;
  }
  
  header {
    display: flex;
    align-items: flex-end;
    flex-direction: column;
  }
  
  .container {
    padding: 0 27px;
  }
  
  #mobile-navbar {
    padding-top: 27px;
    padding-right: 27px;
  }
  
  #mobile-navbar img {
    width: 40px;
  }
  
  #headline-section {
    background-image: url("./assets/header-bg-mobile.png");
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: left 1rem;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-around;
    width: 100%;
    height: 100vh;
  }
  
  #headline-section #name-heading {
    display: flex;
    justify-content: center;
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    text-align: center;
    color: #172b4d;
    padding-top: 40px;
    background-position: top;
    padding-bottom: 5px;
  }
  
  #headline-section #job-role {
    display: flex;
    justify-content: center;
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    text-align: center;
    color: #36b37e;
    padding-bottom: 10px;
  }
  
  #headline-section p {
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 28px;
    text-align: center;
    color: #172b4d;
    padding: 10px;
  }
  
  .languages li {
    background-color: #ebf0ee;
    color: #3a4a42;
    padding: 4px 4px;
    border-radius: 4px;
  }
  
  .portfolio-languages li {
    background-color: white;
    color: #36b37e;
    padding: 4px 4px;
    border-radius: 4px;
    justify-content: space-around;
  }
  
  #social-icons ul {
    display: flex;
    list-style-type: none;
    justify-content: center;
  }
  
  #social-icons ul li {
    margin: 10px;
  }
  
  #arrow-down {
    padding-top: 25px;
    display: flex;
    justify-content: center;
  }
  
  #work-heading {
    display: flex;
    justify-content: center;
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    text-align: center;
    color: #3a4a42;
    padding-top: 40px;
    background-position: top;
    padding-bottom: 5px;
  }
  
  #line {
    display: grid;
    justify-content: center;
  }
  
  #footer-line {
    display: grid;
    justify-content: center;
  }
  
  #line hr {
    width: 48px;
    height: 4px;
    background: #36b37e;
    border-radius: 24px;
    border: none;
  }
  
  #footer-line hr {
    width: 110px;
    height: 4px;
    background: black;
    border-radius: 24px;
    border: none;
  }
  
  #projects-card {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: minmax(300px, auto);
    border-radius: 8px;
    margin: 0 20px;
    margin-top: 30px;
    row-gap: 20px;
  }
  
  .project {
    display: flex;
    flex-direction: column;
    background-color: #d0d9d4;
    border: 1px solid #d0d9d4;
    border-radius: 8px;
    font-family: 'Inter', sans-serif;
  }
  
  /* .project .image{
    width: 327;
    height: 222px;
    background-color:  #D0D9D4;
  } */
  
  .project .content {
    margin-top: 50%;
    background-color: white;
    width: 327;
    height: 222px;
    border-radius: 8px;
  }
  
  .content h3 {
    text-align: center;
    padding-top: 16px;
    color: #3a4a42;
  }
  
  .languages {
    padding-top: 16px;
    display: flex;
    list-style: none;
    justify-content: space-between;
    gap: 12px;
  }
  
  .project .languages {
    padding-top: 16px;
    display: flex;
    list-style: none;
    justify-content: space-between;
    gap: 12px;
  }
  
  .portfolio-languages {
    padding-top: 16px;
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    justify-content: center;
    gap: 12px;
  }
  
  .porfolio-details .languages {
    padding-top: 16px;
    display: flex;
    list-style: none;
    justify-content: space-between;
    gap: 12px;
  }
  
  /* .btn{
    justify-content: center;
    align-items: center;
  } */
  
  .project .btn {
    padding-top: 16px;
    display: flex;
    justify-content: center;
  }
  
  .greenbtn {
    background: #36b37f;
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    border: none;
    border-radius: 4px;
    padding: 12px;
    color: #fff;
    margin-top: 20px;
  }
  
  .greenbtn:hover {
    background-color: #067044;
    font-weight: 700px;
    width: 150px;
  }
  
  .project-btn {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
  }
  
  #aboutme-heading {
    display: flex;
    justify-content: center;
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    text-align: center;
    color: #3a4a42;
    padding-top: 40px;
    background-position: top;
    padding-bottom: 5px;
  }
  
  #about-myself p {
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 28px;
    text-align: center;
    color: #42526e;
    padding: 10px;
  }
  
  #contact-form {
    background: url(assets/contact-frame.svg);
    background-repeat: no-repeat;
    background-position: right bottom;
  }
  
  form {
    padding-top: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10px;
    align-items: center;
    font-family: 'Inter', sans-serif;
    border-radius: 4px;
    font-weight: 400;
    width: 100%;
  }
  
  form input {
    padding: 10px;
    padding-right: 94px;
    margin-left: auto;
    margin-right: auto;
    color: #42526e;
  }
  
  form textarea {
    padding: 10px;
    padding-right: 130px;
    margin-left: auto;
    margin-right: auto;
    color: #42526e;
    border: 1px solid #60c095;
    border-radius: 4px;
  }
  
  form .greenbtn:hover {
    background-color: #067044;
    font-weight: 700px;
    width: 150px;
  }
  
  #contact-form p {
    width: 327px;
    height: 363px;
    font-family: 'Inter', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 40px;
    line-height: 52px;
    text-align: center;
    justify-content: center;
    padding-left: 20px;
    margin-top: 20px;
    color: #172b4d;
  }
  
  .topright {
    background: url(assets/righttop.svg);
    background-repeat: no-repeat;
    background-position: right top;
  }
  
  .bottomleft {
    background: url(assets/bottomleft.svg);
    background-repeat: no-repeat;
    background-position: left bottom;
  }
  
  #about-myself .btn {
    display: flex;
    justify-content: center;
    padding-bottom: 10px;
  }
  
  #portfolio-skills {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: minmax(300px, auto);
    row-gap: 20px;
    margin: 0 20px;
    justify-content: center;
  }
  
  .portfolio-details {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #ebf0ee;
    border: 1px solid #d0d9d4;
    border-radius: 8px;
    font-family: 'Inter', sans-serif;
    color: #344563;
    padding-bottom: 40px;
  }
  
  .portfolio-details h4 {
    font-size: 24px;
  }
  
  span {
    padding-top: 20px;
  }
  
  footer {
    padding-top: 20px;
  }
 
  #mobile-navbar ul {
    display: none;
  }  

  @media(min-width:768px) {
    #projects-card {
      grid-template-columns: repeat(3, 1fr);
      column-gap: 20px;
      padding-left: 20px;
      padding-right: 20px;
    }
  }

